--- a/HMControl/Base.lproj/Main.storyboard
+++ b/HMControl/Base.lproj/Main.storyboard
@@ -85,15 +85,19 @@
             <objects>
                 <viewController storyboardIdentifier="PopupVC" id="XfG-lQ-9wD" customClass="PopupVC" customModule="HMControl" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                        <rect key="frame" x="0.0" y="0.0" width="400" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <stackView distribution="fillEqually" orientation="horizontal" alignment="top" spacing="43" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OL3-bW-E7k">
-                                <rect key="frame" x="56" y="210" width="368" height="20"/>
+                            <stackView distribution="fillEqually" orientation="horizontal" alignment="top" spacing="10" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OL3-bW-E7k">
+                                <rect key="frame" x="40" y="170" width="320" height="60"/>
                                 <subviews>
                                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="f7V-g0-iZC">
-                                        <rect key="frame" x="-7" y="-7" width="108" height="32"/>
-                                        <buttonCell key="cell" type="push" title="Esstisch" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="3Ow-Ya-uVx">
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="qYa-In-wfi"/>
+                                            <constraint firstAttribute="width" constant="100" id="tYc-Mh-loe"/>
+                                        </constraints>
+                                        <buttonCell key="cell" type="bevel" title="Esstisch" bezelStyle="rounded" image="btn_LightBulb_unkown" imagePosition="above" alignment="center" imageScaling="proportionallyDown" inset="2" id="3Ow-Ya-uVx">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                             <font key="font" metaFont="system"/>
                                         </buttonCell>
@@ -102,8 +106,12 @@
                                         </connections>
                                     </button>
                                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="2P6-Bd-OvZ">
-                                        <rect key="frame" x="130" y="-7" width="108" height="32"/>
-                                        <buttonCell key="cell" type="push" title="Artischocke" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="GwM-j4-Cic">
+                                        <rect key="frame" x="110" y="0.0" width="100" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="Mo6-3R-b4S"/>
+                                            <constraint firstAttribute="height" constant="60" id="n0z-Qf-ddz"/>
+                                        </constraints>
+                                        <buttonCell key="cell" type="bevel" title="Artischocke" bezelStyle="rounded" image="btn_LightBulb_unkown" imagePosition="above" alignment="center" allowsMixedState="YES" imageScaling="proportionallyDown" inset="2" id="GwM-j4-Cic">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                             <font key="font" metaFont="system"/>
                                         </buttonCell>
@@ -112,8 +120,12 @@
                                         </connections>
                                     </button>
                                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="mqJ-bQ-uGc">
-                                        <rect key="frame" x="267" y="-7" width="108" height="32"/>
-                                        <buttonCell key="cell" type="push" title="TV-Licht" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="h6F-KV-D6j">
+                                        <rect key="frame" x="220" y="0.0" width="100" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="7rR-fm-KUA"/>
+                                            <constraint firstAttribute="width" constant="100" id="ukR-mD-ZVB"/>
+                                        </constraints>
+                                        <buttonCell key="cell" type="bevel" title="TV-Licht" bezelStyle="rounded" image="btn_LightBulb_unkown" imagePosition="above" alignment="center" imageScaling="proportionallyDown" inset="2" id="h6F-KV-D6j">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                             <font key="font" metaFont="system"/>
                                         </buttonCell>
@@ -150,4 +162,7 @@
             <point key="canvasLocation" x="75" y="221"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="btn_LightBulb_unkown" width="120" height="120"/>
+    </resources>
 </document>
